--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(ADS1219)
 add_subdirectory(ADS1256)
 add_subdirectory(AnimationStation)
+add_subdirectory(CaseLEDs)
 add_subdirectory(CRC32)
 add_subdirectory(FlashPROM)
 add_subdirectory(httpd)
